--- a/app/frontend/src/locales/de/translation.json
+++ b/app/frontend/src/locales/de/translation.json
@@ -85,5 +85,22 @@
   "uploaded": "Hochgeladen",
   "throttled": "Gedrosselt",
   "deleting": "Löschen",
-  "deleted": "Gelöscht"
+  "deleted": "Gelöscht",
+  "fileType": "Dateityp",
+  "name": "Name",
+  "state": "Status",
+  "tags": "Tags",
+  "submittedOn": "Eingereicht am",
+  "lastUpdated": "Zuletzt aktualisiert",
+  "statusDetail": "Statusdetails",
+  "refresh": "Aktualisieren",
+  "delete": "Löschen",
+  "resubmit": "Erneut einreichen",
+  "records": "Datensätze",
+  "deleteConfirmation": "Löschbestätigung",
+  "deleteConfirmationText": "Sind Sie sicher, dass Sie die ausgewählten Elemente löschen möchten?",
+  "cancel": "Abbrechen",
+  "resubmitConfirmation": "Erneute Einreichungsbestätigung",
+  "resubmitConfirmationText": "Sind Sie sicher, dass Sie die ausgewählten Elemente erneut einreichen möchten?",
+  "statusLog": "Statusprotokoll"
 }
