feat(app/frontend/src): added localization

--- a/app/frontend/src/locales/de/translation.json
+++ b/app/frontend/src/locales/de/translation.json
@@ -16,7 +16,7 @@
   "useThisDatasource": "Verwenden Sie diese Datenquelle standardmäßig, um Fragen zu beantworten:",
   "web": "Web",
   "work": "Arbeit",
-  "retrieveDocuments": "Holen Sie so viele Dokumente aus der Suche:",
+  "retrieveDocuments": "Maximale Anzahl Suchergebnisse:",
   "suggestFollowupQuestions": "Folgefragen vorschlagen",
   "userPersona": "Benutzerpersona",
   "systemPersona": "Systempersona",
@@ -47,6 +47,7 @@
     "ungrounded": "Generativ (Unbegründet)"
   },
   "adjust": "Anpassen",
+  "regenerate": "Neu generieren",
   "uploadFilesSection": "Dateien hochladen Abschnitt",
   "uploadFiles": "Dateien hochladen",
   "uploadFilesTab": "Dateien hochladen Tab",
@@ -66,8 +67,9 @@
   "fileStateOptions": "Dateistatusoptionen",
   "folder": "Ordner",
   "folderOptions": "Ordneroptionen",
-  "tag": "Tag",
-  "tagOptions": "Tag-Optionen",
+  "tag": "Schlagwort",
+  "selectTag": "Schlagwort auswählen",
+  "tagOptions": "Schlagwort-Optionen",
   "selectFolder": "Ordner auswählen",
   "selectTimeRange": "Zeitbereich auswählen",
   "selectFileState": "Dateistatus auswählen",
@@ -89,7 +91,7 @@
   "fileType": "Dateityp",
   "name": "Name",
   "state": "Status",
-  "tags": "Tags",
+  "tags": "Schlagwörter",
   "submittedOn": "Eingereicht am",
   "lastUpdated": "Zuletzt aktualisiert",
   "statusDetail": "Statusdetails",
@@ -102,5 +104,46 @@
   "cancel": "Abbrechen",
   "resubmitConfirmation": "Erneute Einreichungsbestätigung",
   "resubmitConfirmationText": "Sind Sie sicher, dass Sie die ausgewählten Elemente erneut einreichen möchten?",
-  "statusLog": "Statusprotokoll"
+  "statusLog": "Statusprotokoll",
+  "examples": [
+    "Gibt es Radioteleskope in Australien?",
+    "Was sind die primären Einnahmequellen von Microsoft?",
+    "Welche Geschmacksrichtungen gibt es bei Breyers?"
+  ],
+  "tabularDataAssistant": "Tabellarischer Datenassistent",
+  "informationAssistantUsesAI": "Der Informationsassistent verwendet KI. Überprüfen Sie auf Fehler.",
+  "maxFileSize": "Maximale Dateigröße",
+  "selectExampleQuery": "Wählen Sie eine Beispielabfrage aus:",
+  "askQuestionAboutCSV": "Stellen Sie eine Frage zur CSV-Datei:",
+  "enterYourQuery": "Geben Sie Ihre Abfrage ein",
+  "hereIsMyAnalysis": "Hier ist meine Analyse",
+  "showMeTheAnswer": "Zeig mir die Antwort",
+  "tabularDataAssistantResponse": "Antwort des tabellarischen Datenassistenten",
+  "generatedImages": "Generierte Bilder",
+  "tempImage": "Temporäres Bild {index}",
+  "noImagesGenerated": "Keine Bilder generiert",
+  "aiGeneratedContentWarning": "KI-generierte Inhalte können Ungenauigkeiten enthalten.",
+  "seeDataframe": "Datenrahmen anzeigen",
+  "tdaExamples": [
+    "Wie viele Zeilen gibt es?",
+    "Was sind die Datentypen jeder Spalte?",
+    "Gibt es fehlende Werte im Datensatz?",
+    "Was sind die Zusammenfassungsstatistiken für kategoriale Daten?"
+  ],
+  "existingTags": "Vorhandene Schlagwörter",
+  "pressEnterToAdd": "Drücken Sie die Eingabetaste, um als neuen Schlagwörter hinzuzufügen",
+  "noMatchingTag": "Kein übereinstimmender Schlagwörter gefunden",
+  "remove": "Entfernen",
+  "tagsToAppend": "Schlagwörter, die jedem unten hochgeladenen Dokument hinzugefügt werden sollen.",
+  "tagsToFilter": "Schlagwörter zum Filtern von Dokumenten.",
+  "clickToAddFiles": "Klicken Sie, um Dateien hinzuzufügen",
+  "or": "Oder",
+  "dragAndDropFiles": "Dateien hierher ziehen, um Dateien hinzuzufügen",
+  "addFiles": "Dateien hinzufügen",
+  "clickToAddCSV": "Klicken Sie, um eine CSV-Datei hinzuzufügen",
+  "dragAndDropCSV": "Ziehen Sie eine CSV-Datei hierher, um sie hinzuzufügen",
+  "searchWork": "Arbeit durchsuchen",
+  "searchWeb": "Web durchsuchen",
+  "compareWithWork": "Mit Arbeit vergleichen",
+  "compareWithWeb": "Mit Web vergleichen"
 }
