--- a/app/frontend/src/locales/en/translation.json
+++ b/app/frontend/src/locales/en/translation.json
@@ -15,7 +15,7 @@
   "useThisDatasource": "Use this datasource to answer Questions by default:",
   "web": "Web",
   "work": "Work",
-  "retrieveDocuments": "Retrieve this many documents from search:",
+  "retrieveDocuments": "Retrieve this many results from search:",
   "suggestFollowupQuestions": "Suggest follow-up questions",
   "userPersona": "User Persona",
   "systemPersona": "System Persona",
@@ -46,6 +46,7 @@
   },
   "clearChat": "Clear chat",
   "adjust": "Adjust",
+  "regenerate": "Regenerate",
   "uploadFilesSection": "Upload Files Section",
   "uploadFiles": "Upload Files",
   "uploadFilesTab": "Upload Files Tab",
@@ -66,6 +67,7 @@
   "folder": "Folder",
   "folderOptions": "Folder Options",
   "tag": "Tag",
+  "selectTag": "Select a tag",
   "tagOptions": "Tag Options",
   "selectFolder": "Select Folder",
   "selectTimeRange": "Select Time Range",
@@ -101,5 +103,25 @@
   "cancel": "Cancel",
   "resubmitConfirmation": "Resubmit Confirmation",
   "resubmitConfirmationText": "Are you sure you want to resubmit the selected items?",
-  "statusLog": "Status Log"
+  "statusLog": "Status Log",
+  "examples": [
+    "Are there any radio telescopes in Australia?",
+    "What are Microsoft's primary sources of revenue?",
+    "What are some flavors of Breyers?"
+  ],
+  "existingTags": "Existing Tags",
+  "pressEnterToAdd": "Press Enter to add as a new tag",
+  "noMatchingTag": "No matching tag found",
+  "tagsToAppend": "Tags to append to each document uploaded below.",
+  "tagsToFilter": "Tags to filter documents by.",
+  "clickToAddFiles": "Click to Add files",
+  "or": "Or",
+  "dragAndDropFiles": "Drag and Drop files here",
+  "addFiles": "Add files",
+  "clickToAddCSV": "Click to Add CSV file",
+  "dragAndDropCSV": "Drag and Drop CSV file here",
+  "searchWork": "Search Work",
+  "searchWeb": "Search Web",
+  "compareWithWork": "Compare with Work",
+  "compareWithWeb": "Compare with Web"
 }
